# systemTradingApp

./: README.md
tauri-app/: .env.example  .gitignore  README.md  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  main.tsx
tauri-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  router.rs  server.rs  web.rs
tauri-app/src-tauri/src/controller/: user.rs
tauri-app/src-tauri/src/db/: db_conn.rs
tauri-app/src/pages/: Auth.tsx  Home.tsx  Settings.tsx  Users.tsx
tauri-app/src/routes/: paths.ts  router.tsx
tauri-app/src/styles/: _variables.scss  global.scss  vaildate.scss
tauri-app/src/utils/: apiUtils.ts  checkUtils.ts  formatUtils.ts
